--- a/index.html
+++ b/index.html
@@ -1,13 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/Koompi-white.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>KOOMPI Encryption</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+    <head>
+        <meta charset="UTF-8" />
+        <link rel="icon" type="image/svg+xml" href="/Koompi-white.png" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+        <!-- Primary Meta Tags -->
+        <title>KOOMPI Encryption</title>
+        <meta
+            name="title"
+            content="KOOMPI Encryption — Encrypt messages, files, or text that matter."
+        />
+        <meta
+            name="description"
+            content="Encrypted Hash is the hash that will be used to decypt your message back."
+        />
+
+        <!-- Open Graph / Facebook -->
+        <meta property="og:type" content="website" />
+        <meta property="og:url" content="https://key.koompi.org/" />
+        <meta
+            property="og:title"
+            content="KOOMPI Encryption — Encrypt messages, files, or text that matter."
+        />
+        <meta
+            property="og:description"
+            content="Encrypted Hash is the hash that will be used to decypt your message back."
+        />
+        <meta
+            property="og:image"
+            content="https://key.koompi.org/thumbnail.png"
+        />
+
+        <!-- Twitter -->
+        <meta property="twitter:card" content="summary_large_image" />
+        <meta property="twitter:url" content="https://key.koompi.org/" />
+        <meta
+            property="twitter:title"
+            content="KOOMPI Encryption — Encrypt messages, files, or text that matter."
+        />
+        <meta
+            property="twitter:description"
+            content="Encrypted Hash is the hash that will be used to decypt your message back."
+        />
+        <meta
+            property="twitter:image"
+            content="https://key.koompi.org/thumbnail.png"
+        />
+    </head>
+    <body>
+        <div id="root"></div>
+        <script type="module" src="/src/main.jsx"></script>
+    </body>
 </html>
